[gd_scene load_steps=11 format=2]

[ext_resource path="res://Assets/Art/SpriteSheets/objects/Interiors_32x32.png" type="Texture" id=1]
[ext_resource path="res://Assets/Art/SpriteSheets/animated_door_2.png" type="Texture" id=2]
[ext_resource path="res://Scripts/Door.gd" type="Script" id=3]

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 64, 0, 16, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 48, 0, 16, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 16, 0, 16, 32 )

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 16, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 32, 0, 16, 32 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ SubResource( 5 ), SubResource( 4 ), SubResource( 2 ), SubResource( 2 ), SubResource( 1 ) ],
"loop": true,
"name": "close",
"speed": 5.0
}, {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "open",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 16, 16 )

[node name="Door" type="Area2D"]
collision_layer = 4
collision_mask = 24
script = ExtResource( 3 )

[node name="DoorClosed" type="Sprite" parent="."]
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 96, 6886, 32, 56 )
region_filter_clip = true

[node name="DoorOpen" type="Sprite" parent="DoorClosed"]
position = Vector2( 1, 2 )
scale = Vector2( 1.07143, 1.2381 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 258, 278, 28, 42 )
region_filter_clip = true

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -16 )
scale = Vector2( 2.29414, 2.6492 )
frames = SubResource( 6 )
animation = "open"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -8 )
shape = SubResource( 7 )
[connection signal="body_entered" from="." to="." method="_on_Door_body_entered"]
[connection signal="body_shape_entered" from="." to="." method="_on_Door_body_shape_entered"]
[connection signal="body_shape_exited" from="." to="." method="_on_Door_body_shape_exited"]
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
